# openai-edge-nano-tts

./: .env.example  .gitignore  Dockerfile  README.md  Start-TTS.vbs  docker-compose.yml  main.py  pyproject.toml  requirements.txt  robots.json  voice.json
.github/workflows/: docker-build-push.yml
app/: handle_text.py  server.py  tts_handler.py
nano-tts/: app.py  nano_tts.py
